[package]

name = "stash-derive-serdes"
keywords = ["data-structures"]
version = "0.1.6"
authors = ["Steven Allen <steven@stebalien.com>"]
edition = "2018"

homepage = "https://github.com/Stebalien/stash-rs"
repository = "https://github.com/Stebalien/stash-rs"
documentation = "https://docs.rs/stash/"
readme = "README.md"

license = "MIT/Apache-2.0"
description="Fork of stash crate using derived serde serialization"

[lib]
name = "stash"

[features]
serialization = ["serde"]

[dependencies]
unreachable = "1"
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
bincode="1"
